kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semcon-util-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: semcon-util
  template:
    metadata:
      labels:
        app: semcon-util
    spec:
      containers:
      - name: semcon-util
        image: oydeu/weekly-digest:latest
        ports:
        - containerPort: 3000
