kube/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: semcon-util-service
spec:
  selector:
    app: semcon-util
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
