kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: semcon-util-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - semcon-util.ownyourdata.eu
    secretName: letsencrypt-semcon-util
  rules:
  - host: semcon-util.ownyourdata.eu
    http:
      paths:
      - path: /
        backend:
          serviceName: semcon-util-service
          servicePort: 80
